# NextCart-AI

./: .flake8  .gitignore  CLAUDE.md  Makefile  PROJECT_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
data/samples/: .gitkeep
docs/: architecture.md  deployment_guide.md
infra/terraform/: backend.tf
infra/terraform/environments/dev/: main.tf  variables.tf
infra/terraform/environments/prod/: main.tf  variables.tf
infra/terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/emr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/glue/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf
infra/terraform/modules/kinesis/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf
infra/terraform/modules/sagemaker/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  (+2 more)
notebooks/: 01_eda.ipynb
scripts/: generate_samples.py
src/ingestion/source1/: load_orders_to_rds.py
src/ingestion/source2/: load_products_to_rds.py
src/pipeline/bronze/: glue_source1_bronze.py  lambda_source2_bronze.py
src/pipeline/silver/: glue_orders_silver.py  glue_products_silver.py
tests/data_quality/: test_sample_data.py
tests/integration/: test_placeholder.py
tests/unit/: test_api_models.py  test_placeholder.py  test_silver_transforms.py
(+10 files in other folders)
