[project]
name = "nextcart"
version = "0.1.0"
description = "Instacart Market Basket Analysis — Data Engineering & ML Platform"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".terraform", "__pycache__", "*.egg-info"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: requires AWS or real DB (deselect with -m 'not integration')",
    "slow: takes more than 30s",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/ingestion/source2/api/*"]
